<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainThreeOne"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    tools:context=".AssignThreeOneActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtvSignInTag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_tag"
        android:textSize="35sp"
        android:layout_marginTop="64dp"
        android:layout_marginHorizontal="18dp"
        android:fontFamily="@font/outfitbold"
        android:includeFontPadding="false"
        android:textColor="@color/color_black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtvWelcomeTag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_stag"
        android:textSize="28sp"
        android:layout_marginTop="14dp"
        android:layout_marginHorizontal="18dp"
        android:fontFamily="@font/outfitregular"
        android:includeFontPadding="false"
        android:textColor="@color/color_black"
        app:layout_constraintTop_toBottomOf="@id/mtvSignInTag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etRegName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="29dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/border_stroke"
        android:fontFamily="@font/outfitregular"
        android:includeFontPadding="false"
        android:padding="20dp"
        android:inputType="text"
        android:text="@string/reg_name"
        android:textColor="@color/color_assign_three"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mtvWelcomeTag"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etRegBName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="29dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_stroke"
        android:fontFamily="@font/outfitregular"
        android:inputType="text"
        android:includeFontPadding="false"
        android:padding="20dp"
        android:text="@string/reg_b_name"
        android:textColor="@color/color_assign_three"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etRegName"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etRegPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="29dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_stroke"
        android:fontFamily="@font/outfitregular"
        android:inputType="phone"
        android:includeFontPadding="false"
        android:padding="20dp"
        android:text="@string/reg_phone"
        android:textColor="@color/color_assign_three"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etRegBName"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etRegEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="29dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_stroke"
        android:fontFamily="@font/outfitregular"
        android:inputType="textEmailAddress"
        android:includeFontPadding="false"
        android:padding="20dp"
        android:text="@string/reg_email"
        android:textColor="@color/color_assign_three"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etRegPhone"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etRegPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="29dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_stroke"
        android:fontFamily="@font/outfitregular"
        android:inputType="textPassword"
        android:includeFontPadding="false"
        android:padding="20dp"
        android:text="@string/reg_pass"
        android:textColor="@color/color_assign_three"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etRegEmail"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mBtnReg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/color_black"
        android:padding="12dp"
        android:text="@string/sign_up"
        android:textSize="18sp"
        app:cornerRadius="5dp"
        android:fontFamily="@font/outfitmedium"
        android:includeFontPadding="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etRegPassword"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtvAccountAlready"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/outfitmedium"
        android:includeFontPadding="false"
        android:text="@string/account_already"
        android:textColor="@color/color_black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mBtnReg"/>

</androidx.constraintlayout.widget.ConstraintLayout>