<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SignInUIOneFragment"
    android:background="@drawable/background_ui_one">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/balanced"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/balanced"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/color_white"
        android:textSize="50sp"
        android:textAlignment="center"
        android:text="@string/login_mTitle"
        android:fontFamily="cursive"
        android:includeFontPadding="false"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/balanced"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/color_yellow"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/login_sTitle"
        android:fontFamily="cursive"
        android:includeFontPadding="false"
        app:layout_constraintTop_toBottomOf="@id/tvMTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/login_user_name"
        android:ems="10"
        android:textSize="14sp"
        android:textAlignment="center"
        android:inputType="textPersonName"
        android:textColor="@color/color_white"
        android:textColorHint="@color/color_white"
        android:background="@drawable/edittext_bg"
        app:layout_constraintTop_toBottomOf="@id/tvSTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etUserPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/login_user_pass"
        android:ems="10"
        android:textSize="14sp"
        android:textAlignment="center"
        android:inputType="textPersonName"
        android:textColor="@color/color_white"
        android:textColorHint="@color/color_white"
        android:background="@drawable/edittext_bg"
        app:layout_constraintTop_toBottomOf="@id/etUserName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/login_button"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="#FF3F6F"
        android:background="@drawable/login_btn_bg"
        app:layout_constraintTop_toBottomOf="@id/etUserPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="30dp"
        android:layout_marginHorizontal="30dp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/color_white"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_margin="20dp"
        android:text="@string/login_no_account"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvForgotPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/color_white"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_margin="30dp"
        android:text="@string/login_forgot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSubTitle"/>

</androidx.constraintlayout.widget.ConstraintLayout>