<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainTwo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AssignTwoActivity"
    android:background="@color/color_white">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bluebg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtvFTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/french_tag"
        android:textSize="25sp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/ibmplexsansthailoopedmedium"
        android:includeFontPadding="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtvSTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/french_sub_tag"
        android:textSize="12sp"
        android:fontFamily="@font/ibmplexsansthailoopedmedium"
        android:includeFontPadding="false"
        app:layout_constraintTop_toBottomOf="@id/mtvFTag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/apIvProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/userprofile"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/mtvSTag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtvUName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppinsmedium"
        android:includeFontPadding="false"
        app:layout_constraintTop_toBottomOf="@id/apIvProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtvUDescr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_desc"
        android:textSize="12sp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/poppinslight"
        android:includeFontPadding="false"
        app:layout_constraintTop_toBottomOf="@id/mtvUName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etUserEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="29dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/blue_border_stroke"
        android:fontFamily="@font/poppinsmedium"
        android:includeFontPadding="false"
        android:padding="12dp"
        android:text="@string/hint_email"
        android:textColor="@color/color_zambezi"
        android:textSize="14sp"
        android:drawableStart="@drawable/unselectbtn"
        android:drawablePadding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mtvUDescr"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etUserOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="29dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_stroke"
        android:fontFamily="@font/poppinsmedium"
        android:includeFontPadding="false"
        android:padding="12dp"
        android:elevation="10dp"
        android:visibility="gone"
        android:text="@string/login_otp"
        android:drawableEnd="@drawable/shieldcross"
        android:textColor="@color/color_zambezi"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUserEmail"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etUserPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="29dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/blue_border_stroke"
        android:fontFamily="@font/poppinsmedium"
        android:includeFontPadding="false"
        android:padding="12dp"
        android:elevation="10dp"
        android:text="@string/hint_otp"
        android:textColor="@color/color_zambezi"
        android:textSize="14sp"
        android:drawableStart="@drawable/unselectbtn"
        android:drawablePadding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUserOtp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mBtnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/color_heroic_blue"
        android:fontFamily="@font/poppinssemibold"
        android:includeFontPadding="false"
        android:padding="12dp"
        android:text="@string/login_tag"
        android:textSize="24sp"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUserPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>