<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signin_ui_bg_three"
    tools:context=".fragment.SignInUITwoFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLogo"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/logo"
        android:layout_margin="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginVertical="30dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/edittext_bg_two"
        android:gravity="center"
        android:hint="@string/login_user_name"
        android:textColor="@color/color_white"
        android:textColorHint="@color/color_white"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etUserPass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/edittext_bg_two"
        android:gravity="center"
        android:hint="@string/login_user_pass"
        android:textColor="@color/color_white"
        android:textColorHint="@color/color_white"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/etUserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/login_btn_bg"
        android:text="@string/login_button"
        app:layout_constraintTop_toBottomOf="@id/etUserPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="@color/color_white"
        android:text="@string/login_no_account"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/back_bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>