<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainFOne"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AssignFourOneActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtvSkip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textSize="16sp"
        android:textColor="#2A2A2A"
        android:padding="4dp"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/intersemibold"
        android:includeFontPadding="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline2"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivWSOne"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/wstwo"
        app:layout_constraintTop_toBottomOf="@id/mtvSkip"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtvExplore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/intersemibold"
        android:includeFontPadding="false"
        android:text="@string/make_memories"
        android:textColor="#2A2A2A"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/ivWSOne" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/intermedium"
        android:includeFontPadding="false"
        android:text="@string/lorem"
        android:textColor="#696969"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/mtvExplore" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />

</androidx.constraintlayout.widget.ConstraintLayout>